src/test/resources/fail/cyclicgraph/D.scala
//acyclic
package fail.cyclicgraph

class D {
  val b: A = null
  val c = C
}
